test/mutation_analysis/s0134_gas_station/hafis/ablation_o3_full/mutants/2/result.txt
./test/mutation_analysis/s0134_gas_station/hafis/ablation_o3_full/mutants/2/Solution.java:21: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
